backpack/src/snapshots/smoke@[gl_]-[jondot_hygen_-_subfolder]-[#wip].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &vendors))"
---
(
    "gl:jondot/hygen/-/subfolder#wip",
    Ok(
        (
            gitlab.com,
            Location {
                url: "https://gitlab.com/jondot/hygen/-/subfolder#wip",
                domain: "gitlab.com",
                path: "/jondot/hygen",
                project: "hygen",
                port: None,
                query: None,
                subfolder: Some(
                    "subfolder",
                ),
                gref: Some(
                    "wip",
                ),
                username: "",
                password: None,
                is_git: false,
            },
        ),
    ),
)
