backpack/src/snapshots/smoke@[gl_]-[jondot_hygen_-_subfolder]-[].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &vendors))"
---
(
    "gl:jondot/hygen/-/subfolder",
    Ok(
        (
            gitlab.com,
            Location {
                url: "https://gitlab.com/jondot/hygen/-/subfolder",
                domain: "gitlab.com",
                path: "/jondot/hygen",
                project: "hygen",
                port: None,
                query: None,
                subfolder: Some(
                    "subfolder",
                ),
                gref: None,
                username: "",
                password: None,
                is_git: false,
            },
        ),
    ),
)
