backpack/src/snapshots/vendors@[bb_]-[jondot_hygen]-[].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &config))"
---
(
    "bb:jondot/hygen",
    Ok(
        (
            bitbucket.org,
            Location {
                url: "https://bitbucket.org/jondot/hygen",
                domain: "bitbucket.org",
                path: "/jondot/hygen",
                project: "hygen",
                port: None,
                query: None,
                subfolder: None,
                gref: None,
                username: "",
                password: None,
                is_git: false,
            },
        ),
    ),
)
