backpack/src/snapshots/vendors@[gh_]-[jondot_hygen]-[].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &config))"
---
(
    "gh:jondot/hygen",
    Ok(
        (
            github.com,
            Location {
                url: "https://github.com/jondot/hygen",
                domain: "github.com",
                path: "/jondot/hygen",
                project: "hygen",
                port: None,
                query: None,
                subfolder: None,
                gref: None,
                username: "",
                password: None,
                is_git: false,
            },
        ),
    ),
)
