backpack/src/snapshots/vendors@[my-vendor_]-[jondot_hygen]-[].snap
---
source: backpack/src/shortlink.rs
expression: "(link.clone(), expand(&link, false, &config))"
---
(
    "my-vendor:jondot/hygen",
    Err(
        "no vendor found for: my-vendor",
    ),
)
